crates/token/src/snapshots/token__tests__lex_str_lit-2.snap
---
source: crates/token/src/lib.rs
expression: "lex(\"\")"
---
- ""
- Ok:
    - token: Eoi
      span:
        range: 0..0
        str: ""

