crates/token/src/snapshots/token__tests__lex_str_lit-3.snap
---
source: crates/token/src/lib.rs
expression: "lex(\"\\\"\")"
---
- "\""
- Err: unexpected end of input

