crates/token/src/snapshots/token__tests__lex_test-2.snap
---
source: crates/token/src/lib.rs
expression: "lex(\"_a2\")"
---
- _a2
- Ok: ~
- - token: Ident
    span:
      range:
        start: 0
        end: 3
      str: _a2
  - token: Eoi
    span:
      range:
        start: 3
        end: 3
      str: ""

