crates/token/src/snapshots/token__tests__lex_test-3.snap
---
source: crates/token/src/lib.rs
expression: "lex(\"\")"
---
- ""
- Ok: ~
- - token: Eoi
    span:
      range: 0..0
      str: ""

