crates/token/src/snapshots/token__tests__lex_test-4.snap
---
source: crates/token/src/lib.rs
expression: "lex(\"\\\"\")"
---
- "\""
- Err: UnexpectedEoi
- - token: Eoi
    span:
      range:
        start: 0
        end: 0
      str: ""

