crates/token/src/snapshots/token__tests__lex_test-7.snap
---
source: crates/token/src/lib.rs
expression: lex(&all_tokens)
---
- "structtest;:==(){}+-*/->:@//"
- Ok: ~
- - token: Struct
    span:
      range: 0..6
      str: struct
  - token: Test
    span:
      range: 6..10
      str: test
  - token: Semi
    span:
      range: 10..11
      str: ;
  - token: Init
    span:
      range: 11..13
      str: ":="
  - token: Assign
    span:
      range: 13..14
      str: "="
  - token: LParen
    span:
      range: 14..15
      str: (
  - token: RParen
    span:
      range: 15..16
      str: )
  - token: Lbrace
    span:
      range: 16..17
      str: "{"
  - token: Rbrace
    span:
      range: 17..18
      str: "}"
  - token: Plus
    span:
      range: 18..19
      str: +
  - token: Minus
    span:
      range: 19..20
      str: "-"
  - token: Asterisk
    span:
      range: 20..21
      str: "*"
  - token: Slash
    span:
      range: 21..22
      str: /
  - token: Arrow
    span:
      range: 22..24
      str: "->"
  - token: Type
    span:
      range: 24..25
      str: ":"
  - token: Extern
    span:
      range: 25..26
      str: "@"
  - token: LineComment
    span:
      range: 26..28
      str: //
  - token: Eoi
    span:
      range: 28..28
      str: ""

